--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       d.getElementsByTagName("head")[0].appendChild(s);
     })();
   </script>
-  <script src="https://client.crisp.chat/l.js" async=""></script>
+  <!-- <script src="https://client.crisp.chat/l.js" async=""></script> -->
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
@@ -21375,7 +21375,7 @@
                         </div>
                       </div>
                     </div><!---->
-                    <div _ngcontent-ng-c558266722="" class="col-12 text-center"><a _ngcontent-ng-c558266722=""
+                    <div _ngcontent-ng-c558266722="" class="col-12 text-center"><a _ngcontent-ng-c558266722="" href="/connection-module/"
                         translate="" class="btn btn-primary mt-2 d-inline-block px-4">BUY NOW!</a></div>
                   </div>
                 </div>
@@ -22001,7 +22001,7 @@
                     </div>
                   </div>
                   <div _ngcontent-ng-c2766910898="" class="row">
-                    <div _ngcontent-ng-c2766910898="" class="col-12 text-center"><a _ngcontent-ng-c2766910898=""
+                    <div _ngcontent-ng-c2766910898="" class="col-12 text-center"><a _ngcontent-ng-c2766910898=""  href="/connection-module/"
                         translate="" class="btn btn-primary mt-4 d-inline-block px-4">BUY NOW!</a></div>
                   </div>
                 </div><img _ngcontent-ng-c2766910898="" src="/assets/images/svg-icons/hut.svg" alt=""
@@ -22768,7 +22768,7 @@
                         </svg></div>
                     </ng-lottie></div>
                 
-                  <div _ngcontent-ng-c4245206203="" class="text-center mt-4"><a _ngcontent-ng-c4245206203=""
+                  <div _ngcontent-ng-c4245206203="" class="text-center mt-4"><a _ngcontent-ng-c4245206203="" href="/connection-module/"
                       translate="" class="btn btn-primary mt-2 d-inline-block px-4">BUY NOW!</a></div>
                 </div>
               </section>
@@ -22889,7 +22889,7 @@
                             </div>
                           </div>
                         </accordion-group><!----></accordion>
-                      <div _ngcontent-ng-c3292928042="" class="text-center"><a _ngcontent-ng-c3292928042="" translate=""
+                      <div _ngcontent-ng-c3292928042="" class="text-center"><a _ngcontent-ng-c3292928042="" translate=""  href="/connection-module/"
                           class="btn btn-primary mt-2 d-inline-block px-4">BUY NOW!</a></div>
                     </div>
                   </div><img _ngcontent-ng-c3292928042="" src="/assets/images/svg-icons/bone.svg" alt=""
